--- a/nginx.conf
+++ b/nginx.conf
@@ -49,7 +49,7 @@ http {
 
         # Redirigir todas las rutas que comienzan con /api/ al backend
         location /api/ {
-            proxy_pass http://dev-dev-backend-service:8080;  
+            proxy_pass http://backend-service:8080;  
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
